@@ -37,7 +37,7 @@ allprojects {
         }
 
         tasks.register("sourcesJar", Jar) {
-            classifier = 'sources'
+            archiveClassifier = 'sources'
             from(sourceSets.main.allJava)
         }
 
@@ -47,7 +47,7 @@ allprojects {
         }
 
         tasks.register("javadocJar", Jar) {
-            classifier = 'javadoc'
+            archiveClassifier = 'javadoc'
             from javadoc
         }
 
@@ -68,6 +68,8 @@ allprojects {
             jvmArgs += '--add-opens=java.base/java.util.stream=ALL-UNNAMED'
             jvmArgs += '--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED'
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
+            jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+            jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
 
             // enable this to check for unintended use of boxed primitive iterators
             // note that this flag might cause OOMs on CI
